syntax = "proto3";

package sec12;

option java_multiple_files = true;
option java_package = "org.example.models.sec12";

message BalanceCheckRequest {
  int32 account_number = 1;
}

message AccountBalance {
  int32 account_number = 1;
  int32 balance = 2;
}

message WithdrawRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

message Money {
  int32 amount = 2;
}

service BankService {

  //unary
  rpc GetAccountBalance(BalanceCheckRequest) returns (AccountBalance);

  //server stream
  rpc Withdraw(WithdrawRequest) returns (stream Money);
}
